--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 node_modules
 /dist
+src/*.js
 
 # local env files
 .env.local
@@ -19,5 +20,3 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw*
-
-src
